updating suprise 3 page

--- a/suprise.html
+++ b/suprise.html
@@ -264,7 +264,7 @@ let player = {
   animations: {}
 };
 
-let camera = { x: 0, y: 0 };
+let camera = { x: start.x, y: start.y };
 
 // Load animation frames
 function loadFrames(prefix, count) {
