updating suprise 3 page

--- a/suprise.html
+++ b/suprise.html
@@ -653,9 +653,13 @@ function handlePageTouchStart(e) {
   const touchX = e.clientX - rect.left;
   const touchY = e.clientY - rect.top;
 
+  // Ignore touches outside the canvas
   if (touchX < 0 || touchY < 0 || touchX > rect.width || touchY > rect.height) return;
 
   handleTap(touchX, touchY);
+
+  // Tap-and-hold movement (repeat)
+  moveInterval = setInterval(() => handleTap(touchX, touchY), MOVE_INTERVAL);
 }
 
 function handlePageTouchEnd(e) {
@@ -672,8 +676,6 @@ function handleTap(clickX, clickY) {
 
   const absDx = Math.abs(dx);
   const absDy = Math.abs(dy);
-
-  if (absDx < tileSize * 0.2 && absDy < tileSize * 0.2) return;
 
   let moveOptions = [];
 
