updating suprise 3 page

--- a/suprise.html
+++ b/suprise.html
@@ -738,6 +738,7 @@ loadImages(() => {
   // === Define player animations here ===
   const directions = ["up", "down", "left", "right"];
   const actions = ["idle", "walk"];
+  const frameCount = 4; // 0–3
 
   player.animations = {};
 
